--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#F8F8FF">
-  <link href="https://fonts.googleapis.com/css?family=Product+Sans:400,500|Roboto:300,400,500|Roboto+Mono:400,700|Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
   <title>Paranoid Android Project</title>
   <meta name="description" content="Download center | Paranoid Android">
   <meta name="msapplication-TileColor" content="#141621">
