--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <meta name="msapplication-TileColor" content="#141621">
   <meta name="theme-color" content="#F8F8FF">
   <meta name="referrer" content="no-referrer" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4306125117141954"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
