Improve theme loading.
Make sure the theme is applied before showing the content.

This will make the website looks smoother as well as we won't have artifacts
when refreshing webpage related to dynamic theming.

Signed-off-by: Hernán Castañón <herna@paranoidandroid.co>

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
 
+  <script src="js/theme.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +45,7 @@
      crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="visibility: hidden; opacity: 0;">
   <noscript>
     <strong>We're sorry but paranoidandroid-vue doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
@@ -52,6 +53,5 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
-<script src="js/theme.js"></script>
 
 </html>
